# elevenlabs-api

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.ms
.github/workflows/: rust.yml
examples/: tts.rs
src/: elevenlabs.rs  lib.rs
src/apis/: mod.rs  requests.rs  tts.rs
