[package]
name = "elevenlabs-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
ureq = { version = "2.7.1", features = ["json", "tls"] }

[[example]]
name = "tts"
path = "examples/tts.rs"
